@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2011 Google, Inc.
+ * Copyright (c) 2011, 2023 Google, Inc.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -74,7 +74,7 @@ public final class CharacterPropertyEditor extends AbstractTextPropertyEditor {
 			return false;
 		}
 		// modify property
-		property.setValue(new Character(text.charAt(0)));
+		property.setValue(Character.valueOf(text.charAt(0)));
 		return true;
 	}
 }
