@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2011 Google, Inc.
+ * Copyright (c) 2011, 2023 Google, Inc.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -37,7 +37,7 @@ public class SpinnerEditor implements IDataEditor {
 	////////////////////////////////////////////////////////////////////////////
 	@Override
 	public Object getValue() {
-		return new Integer(m_field.getSelection());
+		return Integer.valueOf(m_field.getSelection());
 	}
 
 	@Override
