@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2011 Google, Inc.
+ * Copyright (c) 2011, 2023 Google, Inc.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -35,7 +35,7 @@ public final class IntegerPreferenceProvider extends AbstractPreferenceProvider 
 	@Override
 	public Object getValue(boolean def) {
 		int value = def ? m_store.getDefaultInt(m_key) : m_store.getInt(m_key);
-		return new Integer(value);
+		return Integer.valueOf(value);
 	}
 
 	@Override
