@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2011 Google, Inc.
+ * Copyright (c) 2011, 2023 Google, Inc.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -58,11 +58,11 @@ public final class TreeBeanAdvisor extends TreeStructureAdvisor {
 				return Boolean.FALSE;
 			}
 			if (children.getClass().isArray()) {
-				return new Boolean(Array.getLength(children) > 0);
+				return Boolean.valueOf(Array.getLength(children) > 0);
 			}
 			if (children instanceof Collection) {
 				Collection collection = (Collection) children;
-				return new Boolean(!collection.isEmpty());
+				return Boolean.valueOf(!collection.isEmpty());
 			}
 		}
 		return null;
