@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2011 Google, Inc.
+ * Copyright (c) 2011, 2023 Google, Inc.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -36,42 +36,42 @@ public class CastTest extends AbstractEngineTest {
 	////////////////////////////////////////////////////////////////////////////
 	@Test
 	public void test_cast_byte() throws Exception {
-		assertEquals(new Byte((byte) 1), evaluateExpression("(byte)1", "byte"));
+		assertEquals(Byte.valueOf((byte) 1), evaluateExpression("(byte)1", "byte"));
 	}
 
 	@Test
 	public void test_cast_short() throws Exception {
-		assertEquals(new Short((short) 1), evaluateExpression("(short)1", "short"));
+		assertEquals(Short.valueOf((short) 1), evaluateExpression("(short)1", "short"));
 	}
 
 	@Test
 	public void test_cast_int() throws Exception {
-		assertEquals(new Integer(1), evaluateExpression("(int)1", "int"));
+		assertEquals(Integer.valueOf(1), evaluateExpression("(int)1", "int"));
 	}
 
 	@Test
 	public void test_cast_long() throws Exception {
-		assertEquals(new Long(1L), evaluateExpression("(long)1", "long"));
+		assertEquals(Long.valueOf(1L), evaluateExpression("(long)1", "long"));
 	}
 
 	@Test
 	public void test_cast_float() throws Exception {
-		assertEquals(new Float(1.2f), evaluateExpression("(float)1.2f", "float"));
+		assertEquals(Float.valueOf(1.2f), evaluateExpression("(float)1.2f", "float"));
 	}
 
 	@Test
 	public void test_cast_float2() throws Exception {
-		assertEquals(new Float(1.2f), evaluateExpression("(float)1.2", "float"));
+		assertEquals(Float.valueOf(1.2f), evaluateExpression("(float)1.2", "float"));
 	}
 
 	@Test
 	public void test_cast_float3() throws Exception {
-		assertEquals(new Float(1.2f), evaluateExpression("(float)1.2d", "double"));
+		assertEquals(Float.valueOf(1.2f), evaluateExpression("(float)1.2d", "double"));
 	}
 
 	@Test
 	public void test_cast_double() throws Exception {
-		assertEquals(new Double(1.2d), evaluateExpression("(double)1.2d", "double"));
+		assertEquals(Double.valueOf(1.2d), evaluateExpression("(double)1.2d", "double"));
 	}
 
 	@Test
