@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2011 Google, Inc.
+ * Copyright (c) 2011, 2023 Google, Inc.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -115,6 +115,6 @@ public class DoubleTest extends AbstractEngineTest {
 	//
 	////////////////////////////////////////////////////////////////////////////
 	private void check_double(String expression, double expected) throws Exception {
-		assertEquals(new Double(expected), evaluateExpression(expression, "double"));
+		assertEquals(Double.valueOf(expected), evaluateExpression(expression, "double"));
 	}
 }
