@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2011 Google, Inc.
+ * Copyright (c) 2011, 2023 Google, Inc.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -135,6 +135,6 @@ public class LongTest extends AbstractEngineTest {
 	//
 	////////////////////////////////////////////////////////////////////////////
 	private void check_long(String expression, long expected) throws Exception {
-		assertEquals(new Long(expected), evaluateExpression(expression, "long"));
+		assertEquals(Long.valueOf(expected), evaluateExpression(expression, "long"));
 	}
 }
